fix tablet-size spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2666,6 +2666,14 @@ li {
     opacity: 0.9;
 }
 
+.btn-group-2 {
+  display: flex;
+  height: 100%;
+  margin-bottom: 0;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
 
@@ -2940,6 +2948,19 @@ li {
     margin-bottom: .7rem;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .btn-group-2 {
+    display: flex;
+    height: 100%;
+    margin-bottom: 0;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #team {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
   }
 } 
 
@@ -3253,6 +3274,8 @@ li {
     padding-right: 30px;
     font-size: 16px;
   }
+
+
 
   .img-cut {
     display: inline-block;
